# update-all

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: publish.yml
src/update_all/: agent.py  cli.py  commands.py  idempotency.py  notify.py  password.py  pty_exec.py  responder.py  runner.py  sudo.py  updaters.py
tests/: test_agent.py  test_cli.py  test_e2e.py  test_idempotency.py  test_password.py  test_responder.py  test_runner.py  test_sudo.py  test_updaters.py
