[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "update-all"
version = "1.0.0"
description = "macOS and Linux dev machine package manager updater"
requires-python = ">=3.11"
dependencies = ["rich>=14.0.0", "typer>=0.12.0"]

[project.scripts]
update-all = "update_all.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "freezegun>=1.5.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
